--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,4 +7,6 @@
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
 
-$-webkit-text-size-adjust: 100%;
+$margin: 0;
+$padding: 0;
+$line-heaight: 1.5;
