--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,7 +4,9 @@
 
 @charset "utf-8";
 
-$max-width: 1920px !important;
+#main {
+    max-width: 1920px !important;
+}
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
