[UPD] Controlled thumbnails

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -225,11 +225,13 @@
 
   .archive__item-teaser {
     @include breakpoint($small) {
-      max-height: 200px;
+      max-height: 120px;
     }
 
     @include breakpoint($medium) {
-      max-height: 120px;
+      min-height: 200px;
+      max-height: 200px;
+      border: 1px solid $border-color
     }
   }
 }
