[UPD] Logo-teaser solved

--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -81,11 +81,11 @@
 
   {% if page_large_image %}
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:image" content="{{ page_large_image }}">
+    <meta name="twitter:image:src" content="{{ page_large_image }}">
   {% else %}
     <meta name="twitter:card" content="summary">
     {% if page_teaser_image %}
-      <meta name="twitter:image" content="{{ page_teaser_image }}">
+      <meta name="twitter:image:src" content="{{ page_teaser_image }}">
     {% endif %}
   {% endif %}
 
