[UPD] Expanding project archive to be 3 colums per row

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -236,6 +236,7 @@
 
   .archive__item-teaser-project {
     @include breakpoint($small) {
+      width: span(4 of 12);
       max-height: 200px;
       border: 1px solid $border-color
     }
