[UPD] Expanding project archive to be 3 colums per row

--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -242,6 +242,7 @@
     }
 
     @include breakpoint($medium) {
+      width: span(4 of 12);
       max-height: 300px;
       border: 1px solid $border-color
     }
