--- a/_includes/archive-single-page.html
+++ b/_includes/archive-single-page.html
@@ -12,8 +12,8 @@
 
 <div class="{{ include.type | default: 'list' }}__item">
   <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork">
-    {% if include.type == "grid" and teaser %}
-      <div class="archive__item-teaser-project">
+    {% if include.type == "grid-projects" and teaser %}
+      <div class="archive__item-teaser">
         <img src="{{ teaser | relative_url }}" alt="">
       </div>
     {% endif %}
